# Pygmail

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  setup.py
docs/: Makefile  conf.py  example.ipynb  make.bat
docs/pygmail/: __init__.py
tests/: test_pyg-mail.py
